--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel='stylesheet' href='../src/scss/index.scss'>
-  <title>Template</title>
-</head>
-<body>
-<include src='./partials/header.html'></include>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="./scss/index.scss" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="images/favicon.png" />
+
+    <title>NAtours | Exciting tours for adventurous people</title>
+  </head>
+
+  <body>
+    <include src="./partials/header.html"></include>
+  </body>
 </html>
