--- a/src/index.html
+++ b/src/index.html
@@ -23,36 +23,8 @@
 
   <body>
     <include src="./partials/header.html"></include>
-
-    <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">col-1-of-2</div>
-        <div class="col-1-of-2">col-1-of-2</div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-1-of-3">col-1-of-3</div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">col-1-of-3</div>
-        <div class="col-2-of-3">col-2-of-3</div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-2-of-4">col-2-of-4</div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">col-1-of-4</div>
-        <div class="col-3-of-4">col-3-of-4</div>
-      </div>
-    </section>
+    <main>
+      <include src="./partials/about.html"></include>
+    </main>
   </body>
 </html>
