--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="./images/icons/icon-fonts.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet" />
@@ -25,6 +27,7 @@
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/about.html"></include>
+      <include src="./partials/features.html"></include>
     </main>
   </body>
 </html>
