--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <main>
       <include src="./partials/about.html"></include>
       <include src="./partials/features.html"></include>
+      <include src="./partials/tours.html"></include>
     </main>
   </body>
 </html>
