start with testimonials section

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
       <include src="./partials/about.html"></include>
       <include src="./partials/features.html"></include>
       <include src="./partials/tours.html"></include>
+      <include src="./partials/testimonials.html"></include>
     </main>
   </body>
 </html>
