add form and transitions to it

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       <include src="./partials/features.html"></include>
       <include src="./partials/tours.html"></include>
       <include src="./partials/testimonials.html"></include>
+      <include src="./partials/booking.html"></include>
     </main>
   </body>
 </html>
