add footer, finish with booking form

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       <include src="./partials/tours.html"></include>
       <include src="./partials/testimonials.html"></include>
       <include src="./partials/booking.html"></include>
+      <include src="./partials/footer.html"></include>
     </main>
   </body>
 </html>
