add alternative navigation. WIP

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   </head>
 
   <body>
+    <include src="./partials/alt-navigation.html"></include>
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/about.html"></include>
